@@ -1,5 +1,7 @@
 *SVN*
 
+* Introduce a default respond_to block for custom types.  #8174 [Josh Peek]
+
 * auto_complete_field takes a :method option so you can GET or POST.  #8120 [zapnap]
 
 * Added option to suppress :size when using :maxlength for FormTagHelper#text_field #3112 [rails@tpope.info]
